# Project

IT_Project/: db.sqlite3  pyproject.toml
IT_Project/events/: admin.py  models.py  serializers.py  views.py
IT_Project/events/migrations/: 0001_initial.py  0002_clients_events_hotels_typeoftour_and_more.py  0003_events_name.py  0004_alter_clients_options_alter_employees_options_and_more.py
IT_Project/project1/: settings.py  urls.py
IT_Project/users/: models.py  serializers.py  views.py
IT_Project/users/migrations/: 0001_initial.py
